@@ -17,6 +17,9 @@
    - deraadt@cvs.openbsd.org 2002/06/23 09:39:55
      [ssh-keygen.c]
      u_int stuff
+   - deraadt@cvs.openbsd.org 2002/06/23 09:46:51
+     [bufaux.c servconf.c]
+     minor KNF.  things the fingers do while you read
 
 20020623
  - (stevesk) [configure.ac] bug #255 LOGIN_NEEDS_UTMPX for AIX.
@@ -1061,4 +1064,4 @@
  - (stevesk) entropy.c: typo in debug message
  - (djm) ssh-keygen -i needs seeded RNG; report from markus@
 
-$Id: ChangeLog,v 1.2258 2002/06/23 21:28:13 mouring Exp $
+$Id: ChangeLog,v 1.2259 2002/06/23 21:29:23 mouring Exp $
